# object_tracking

./: .gitignore  README.md  main.py  pyproject.toml
data/cropped/: object_to_track.json
data/original/: frame_dict.json
data/submission/: part_1_object_tracking.json  part_2_frame_dict.json
src/object_tracking/: __init__.py
src/object_tracking/algorithms/: matching.py  object_detection.py  object_tracking.py
src/object_tracking/utils/draw/: object_detection.py  object_tracking.py
src/object_tracking/utils/io/: __init__.py  object_detection.py  object_tracking.py
tools/: prepare_data.py
