[project]
name = "object_tracking"
version = "0.0.1"
description = "single object tracking, multi-object tracking, and data association"
authors = [{ name = "Alex Lavaee", email = "lavaalex3@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
